# dox

./: .gitignore  DOX_WORLD_CLASS_CHECKLIST.md  FORMAT_COMPATIBILITY_POLICY.md  README.md
dox-js/: package-lock.json  package.json
dox-js/src/: index.ts  parser.ts  types.ts
dox-py/: README.md  pyproject.toml
dox-py/benchmarks/: token_efficiency.py
dox-py/examples/: benchmark-complex-layout.dox  benchmark-invoice.dox  benchmark-nested-tables.dox  financial-report.dox  minimal.dox
dox-py/src/dox/: __init__.py  chunker.py  cli.py  diff.py  merger.py  renderer.py  schema.py  serializer.py  validator.py
dox-py/src/dox/converters/: __init__.py  _figure_utils.py  to_docx.py  to_html.py  to_json.py  to_markdown.py  to_pdf.py
dox-py/src/dox/exporters/: docling_exporter.py  omnidocbench_exporter.py  pymupdf_exporter.py
dox-py/src/dox/models/: document.py  elements.py  metadata.py  spatial.py
dox-py/src/dox/parsers/: parser.py
dox-py/tests/: test_audit_features.py  test_benchmark.py  test_canonical_integrity.py  test_chunker.py  test_cli.py  test_converters.py  test_cross_page.py  test_diff.py  test_docling_exporter.py  test_error_handling.py  test_format_fidelity.py  test_fuzz_roundtrip.py  test_head_to_head.py  test_omnidocbench.py  test_parser.py  test_performance.py  test_real_extraction.py  test_real_world_docs.py  test_renderer.py  test_roundtrip_conversion.py  test_stress_roundtrip.py  test_v1_features.py  test_validator.py
vscode-dox/: language-configuration.json  package.json
vscode-dox/syntaxes/: dox.tmLanguage.json
