[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dox-format"
version = "1.0.0"
description = "Reference implementation for .dox — Document Open eXchange Format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "DeepSearch Contributors" },
]
keywords = ["document", "intelligence", "ocr", "parsing", "markdown", "format"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "markdown-it-py>=3.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
docx = ["python-docx>=1.0"]
pdf = ["reportlab>=4.0"]
render = ["weasyprint>=60.0", "jinja2>=3.1"]
docling = ["docling>=2.0"]
all = ["python-docx>=1.0", "reportlab>=4.0", "weasyprint>=60.0", "jinja2>=3.1", "docling>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
dox = "dox.cli:main"

[project.urls]
Homepage = "https://github.com/deepsearch-ai/dox"
Documentation = "https://dox-format.org"
Repository = "https://github.com/deepsearch-ai/dox"

[tool.hatch.build.targets.wheel]
packages = ["src/dox"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "performance: performance tests that measure speed and scalability",
    "fuzz: fuzzing tests that verify robustness against malformed inputs",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
